--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
     <div class="less_task"><div class="less_name">Λογοτεχνία</div><textarea class="less_cont" id="cont11"></textarea></div>
     <div class="less_task"><div class="less_name">Μαθηματικά</div><textarea class="less_cont" id="cont12"></textarea></div>
     <div class="less_task"><div class="less_name">Μουσική</div><textarea class="less_cont" id="cont13"></textarea></div>
-    <div class="less_task"><div class="less_name">Οδύσσεια</div><textarea class="less_cont" id="cont14"></textarea></div>
+    <div class="less_task"><div class="less_name">Ιλιάδα</div><textarea class="less_cont" id="cont14"></textarea></div>
     <div class="less_task"><div class="less_name">Πληροφορική</div><textarea class="less_cont" id="cont15"></textarea></div>
     <div class="less_task"><div class="less_name">Τεχνολογία</div><textarea class="less_cont" id="cont16"></textarea></div>
     <div class="less_task"><div class="less_name">Φυσική</div><textarea class="less_cont" id="cont17"></textarea></div>
@@ -179,7 +179,7 @@
    <div class="lesson_box"><a href="#" target="_blank">Θρησκευτικά</a></div>
    <div class="lesson_box"><a href="https://minedu-secondary.webex.com/meet/lpapage" target="_blank">Ιστορία</a></div>
    <div class="lesson_box"><a href="https://minedu-secondary.webex.com/meet/csachpel" target="_blank">Λογοτεχνία</a></div>  
-   <div class="lesson_box"><a href="https://minedu-secondary2.webex.com/meet/icharal" target="_blank">Μαθηματικά</a></div>
+   <div class="lesson_box"><a href="https://minedu-secondary.webex.com/meet/icharal" target="_blank">Μαθηματικά</a></div>
    <div class="lesson_box"><a href="https://minedu-secondary.webex.com/meet/soffountou" target="_blank">Μουσική</a></div>
    <div class="lesson_box"><a href="https://minedu-secondary.webex.com/meet/lpapage" target="_blank">Ιλιάδα</a></div>
    <div class="lesson_box"><a href="https://minedu-secondary.webex.com/meet/atkarage" target="_blank">Πληροφορική</a></div>
